# aitrios-edge-mdt-tpc

./: README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml  nightly.yml  publish_release.yml  run_api_test.yml  run_test.yml  run_tests.yml  run_tests_conv314_tpc10.yml  run_tests_conv314_tpc11.yml  run_tests_conv314_tpc40.yml  run_tests_conv316_tpc10.yml  run_tests_conv316_tpc40.yml  run_tests_conv316_tpc41.yml  run_tests_conv316_tpc50.yml  run_tests_conv317_tpc10.yml  run_tests_conv317_tpc40.yml  run_tests_conv317_tpc41.yml  run_tests_conv317_tpc50.yml  run_tests_conv318_tpc10.yml  run_tests_conv318_tpc40.yml  run_tests_conv318_tpc41.yml  run_tests_conv318_tpc50.yml
ai_toolchain_tpc/: __init__.py  get_tpc.py
ai_toolchain_tpc/data/: __init__.py
ai_toolchain_tpc/data/imx500/: __init__.py  tpc_v1_0_lut.py
ai_toolchain_tpc/data/imx_500/: __init__.py  tpc_v1_0.py  tpc_v1_0_lut.py  tpc_v1_0_pot.py  tpc_v4_0.py
ai_toolchain_tpc/data/imx_500/V1/: __init__.py  tpc_v1_0.py
ai_toolchain_tpc/data/imx_500/schema_v1/: __init__.py  tpc_v1_0.py  tpc_v1_0_lut.py  tpc_v1_0_pot.py  tpc_v2_0.py  tpc_v2_0_lut.py  tpc_v3_0.py  tpc_v3_0_lut.py  tpc_v4_0.py
docsrc/images/: upload_guide.md
edgemdt_tpc/: __init__.py  get_tpc.py  version.py
edgemdt_tpc/data/: __init__.py
edgemdt_tpc/data/imx500/: __init__.py  tpc_v1_0.py  tpc_v1_0_lut.py  tpc_v1_1.py  tpc_v1_1_lut.py  tpc_v4_0.py  tpc_v5_0.py  tpc_v6_0.py
tests/: api_tests.py  base_test.py  network_deployment_tests.py
tests/tpc_tests/: test_api.py  test_index_select.py  test_mct_wrapper.py  test_stack.py  test_take.py
