[metadata]
name = edgemdt_tpc
version = attr: edgemdt_tpc.version.__version__
description = EdgeMDT TPC package
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
