[metadata]
name = edge-mdt-tpc
version = attr: edgemdt_tpc.version.__version__
description = EdgeMDT TPC package
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
author = ssi-dnn-dev
author_email = ssi-dnn-dev@sony.com
maintainer = ssi-dnn-dev
maintainer_email = ssi-dnn-dev@sony.com

[options]
install_requires =
    model-compression-toolkit>=2.3
packages=find:

[options.packages.find]
include =
    edgemdt_tpc*